# Backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20260706_0001_initial.py  20260706_0002_admin_dashboard.py
app/: main.py
app/api/v1/: health.py  orders.py  router.py  tracking.py
app/api/v1/admin/: auth.py  metrics.py  orders.py
app/core/: config.py
app/db/: models.py
app/schemas/: admin.py  orders.py  tracking.py
app/services/: admin_orders.py  auth.py  geo.py  metrics.py  n8n_notify.py  offers.py  orders.py  phone.py  sheets.py  shipping.py
app/services/tracking/: dispatcher.py  payloads.py
docs/n8n/: CONFIGURE-SOLSYRA.md  import-workflows.js  solyra-order-to-whatsapp.json  solyra-whatsapp-inbound.json  whatsapp-setup.md
scripts/: entrypoint.sh
scripts/sql/: 2026_admin_dashboard.sql
