[project]
name = "solyra-api"
version = "0.1.0"
description = "Solyra Dermocare COD order API"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.3",
  "asyncpg>=0.29.0",
  "fastapi[standard]>=0.115.0",
  "httpx>=0.27.2",
  "psycopg2-binary>=2.9.9",
  "pydantic-settings>=2.5.2",
  "python-dotenv>=1.0.1",
  "sqlalchemy[asyncio]>=2.0.35",
  "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools]
packages = ["app"]
